# properti

./: .gitignore  .replit  app.py  gemini.py  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
app/: __init__.py  config.py  models.py
app/blueprints/: admin.py  api.py  main.py
app/services/: ai_service.py  ml_service.py
app/utils/: search_utils.py
data/: base_prices.json  properties.json
templates/: admin.html  base.html  chat.html  index.html  predict.html  properties.html  property_detail.html
templates/admin/: base.html  dashboard.html  edit_property.html  predictions.html  properties.html  sidebar.html
templates/admin/css/: admin_styles.html
templates/admin/js/: admin_scripts.html
